// Stocks Proto to connect Java Gateway to Go stocks-service

/* 
    Java protoc complation done for you throug Gradle ( ./gradlew clean build )

    Go protoc complation command
    run from /stocks-app/proto dir
    protoc --go_out=plugins=grpc:../stocks-service/proto/stocks stocks.proto
*/

syntax = "proto3";

service StockService {
    rpc GetStockPrice(Request) returns (Response);
    rpc GetStockOptions(Request) returns (Response);
    rpc GetTimeSeries(TimeRequest) returns (Response);
}

message Request {
    string stockSymbol = 1;
}

message TimeRequest {
    string Symbol = 1;
    string time = 2;
}

message Response {
    string response = 1;
    int32 status = 2;
}