syntax = "proto3";

service StockService {
    rpc GetStockPrice(Request) returns (Response);
}

message Request {
    string stockSymbol = 1;
}

message Response {
    string stockInfo = 1;
}